--- a/fixtures/vcr_cassettes/sciencewire_harvester_wos_no_pubmed.yml
+++ b/fixtures/vcr_cassettes/sciencewire_harvester_wos_no_pubmed.yml
@@ -48,7 +48,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 04 Dec 2013 00:37:31 GMT
+      - Sat, 22 Mar 2014 00:50:36 GMT
       Content-Length:
       - '277'
     body:
@@ -57,7 +57,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>82248</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Wed, 04 Dec 2013 00:37:31 GMT
+  recorded_at: Sat, 22 Mar 2014 00:50:37 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/82248?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -95,7 +95,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 04 Dec 2013 00:37:31 GMT
+      - Sat, 22 Mar 2014 00:50:37 GMT
       Content-Length:
       - '3566'
     body:
@@ -140,7 +140,7 @@ http_interactions:
         \   <AuthorCitationCountList>1,0,5|2,0,5</AuthorCitationCountList>\r\n    <CopyrightStateProvince>NJ</CopyrightStateProvince>\r\n
         \   <CopyrightCountry>UNITED STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Wed, 04 Dec 2013 00:37:31 GMT
+  recorded_at: Sat, 22 Mar 2014 00:50:38 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -158,7 +158,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Wed, 04 Dec 2013 00:37:32 GMT
+      - Sat, 22 Mar 2014 00:50:37 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -166,12 +166,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DD376329E794C1_0261SID
+      - 9DFD507532CDE5D1_0681SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DD376329E794C1_0261SID; domain=.nih.gov; path=/; expires=Thu, 04
-        Dec 2014 00:37:32 GMT
+      - ncbi_sid=9DFD507532CDE5D1_0681SID; domain=.nih.gov; path=/; expires=Sun, 22
+        Mar 2015 00:50:37 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -180,8 +180,9 @@ http_interactions:
       - chunked
     body:
       encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n\n<eFetchResult>\n\t<ERROR>WebEnv
+      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<!DOCTYPE eEfetchResult
+        PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Wed, 04 Dec 2013 00:37:32 GMT
+  recorded_at: Sat, 22 Mar 2014 00:50:38 GMT
 recorded_with: VCR 2.5.0
