--- a/fixtures/vcr_cassettes/pubmed_harvester_spec_no_filtering_local_only.yml
+++ b/fixtures/vcr_cassettes/pubmed_harvester_spec_no_filtering_local_only.yml
@@ -51,7 +51,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 04 Dec 2013 21:03:59 GMT
+      - Mon, 24 Mar 2014 17:48:30 GMT
       Content-Length:
       - '278'
     body:
@@ -60,7 +60,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>143802</queryID>\r\n
         \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Wed, 04 Dec 2013 21:04:00 GMT
+  recorded_at: Mon, 24 Mar 2014 17:48:31 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/143802?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -98,7 +98,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 04 Dec 2013 21:03:59 GMT
+      - Mon, 24 Mar 2014 17:48:31 GMT
       Content-Length:
       - '148'
     body:
@@ -106,7 +106,7 @@ http_interactions:
       string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" />"
     http_version: 
-  recorded_at: Wed, 04 Dec 2013 21:04:00 GMT
+  recorded_at: Mon, 24 Mar 2014 17:48:31 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -124,7 +124,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 04 Dec 2013 21:04:01 GMT
+      - Mon, 24 Mar 2014 17:48:32 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -132,12 +132,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DE542729F98C11_0032SID
+      - 08DE23423306FF01_0190SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DE542729F98C11_0032SID; domain=.nih.gov; path=/; expires=Thu, 04
-        Dec 2014 21:04:01 GMT
+      - ncbi_sid=08DE23423306FF01_0190SID; domain=.nih.gov; path=/; expires=Tue, 24
+        Mar 2015 17:48:32 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
@@ -146,8 +146,8 @@ http_interactions:
       encoding: US-ASCII
       string: ! '<?xml version="1.0"?>
 
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st May 2013//EN"
-        "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_130501.dtd">
+        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January
+        2014//EN" "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_140101.dtd">
 
         <PubmedArticleSet>
 
@@ -155,5 +155,5 @@ http_interactions:
 
 '
     http_version: 
-  recorded_at: Wed, 04 Dec 2013 21:04:01 GMT
+  recorded_at: Mon, 24 Mar 2014 17:48:32 GMT
 recorded_with: VCR 2.5.0
