--- a/fixtures/vcr_cassettes/sciencewire_harvester_adds_new_publication.yml
+++ b/fixtures/vcr_cassettes/sciencewire_harvester_adds_new_publication.yml
@@ -37,7 +37,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 04 Dec 2013 00:37:23 GMT
+      - Sat, 22 Mar 2014 00:50:25 GMT
       Content-Length:
       - '6476'
     body:
@@ -123,7 +123,7 @@ http_interactions:
         \   <CopyrightPublisher>LIPPINCOTT WILLIAMS &amp; WILKINS</CopyrightPublisher>\r\n
         \   <CopyrightCity>PHILADELPHIA</CopyrightCity>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Wed, 04 Dec 2013 00:37:24 GMT
+  recorded_at: Sat, 22 Mar 2014 00:50:26 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -141,7 +141,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 04 Dec 2013 00:37:24 GMT
+      - Sat, 22 Mar 2014 00:50:25 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -149,12 +149,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DD761029E79441_0319SID
+      - 9DFC786432CDE511_0130SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DD761029E79441_0319SID; domain=.nih.gov; path=/; expires=Thu, 04
-        Dec 2014 00:37:24 GMT
+      - ncbi_sid=9DFC786432CDE511_0130SID; domain=.nih.gov; path=/; expires=Sun, 22
+        Mar 2015 00:50:25 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
@@ -162,7 +162,7 @@ http_interactions:
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\"?>\n<!DOCTYPE PubmedArticleSet PUBLIC \"-//NLM//DTD
-        PubMedArticle, 1st May 2013//EN\" \"http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_130501.dtd\">\n<PubmedArticleSet>\n<PubmedArticle>\n
+        PubMedArticle, 1st January 2014//EN\" \"http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_140101.dtd\">\n<PubmedArticleSet>\n<PubmedArticle>\n
         \   <MedlineCitation Owner=\"NLM\" Status=\"MEDLINE\">\n        <PMID Version=\"1\">10048354</PMID>\n
         \       <DateCreated>\n            <Year>1999</Year>\n            <Month>04</Month>\n
         \           <Day>22</Day>\n        </DateCreated>\n        <DateCompleted>\n
@@ -186,11 +186,11 @@ http_interactions:
         and experimental imaging studies and treatment options are also reviewed.
         An effort is made to give the orthopedic perspective on each issue, providing
         a valuable resource for all orthopedic surgeons involved in the care of the
-        patient with frostbite.</AbstractText>\n            </Abstract>\n            <Affiliation>Department
-        of Orthopaedics and Rehabilitation, University of New Mexico, Albuquerque,
-        USA.</Affiliation>\n            <AuthorList CompleteYN=\"Y\">\n                <Author
-        ValidYN=\"Y\">\n                    <LastName>McAdams</LastName>\n                    <ForeName>T
-        R</ForeName>\n                    <Initials>TR</Initials>\n                </Author>\n
+        patient with frostbite.</AbstractText>\n            </Abstract>\n            <AuthorList
+        CompleteYN=\"Y\">\n                <Author ValidYN=\"Y\">\n                    <LastName>McAdams</LastName>\n
+        \                   <ForeName>T R</ForeName>\n                    <Initials>TR</Initials>\n
+        \                   <Affiliation>Department of Orthopaedics and Rehabilitation,
+        University of New Mexico, Albuquerque, USA.</Affiliation>\n                </Author>\n
         \               <Author ValidYN=\"Y\">\n                    <LastName>Swenson</LastName>\n
         \                   <ForeName>D R</ForeName>\n                    <Initials>DR</Initials>\n
         \               </Author>\n                <Author ValidYN=\"Y\">\n                    <LastName>Miller</LastName>\n
@@ -284,26 +284,27 @@ http_interactions:
         NlmCategory=\"CONCLUSIONS\">These data indicate that endotracheal intubation
         and mechanical ventilation, regardless of the method of ventilation, cause
         damage to the tracheal mucosa, but that poorly humidified inspired gases cause
-        significantly greater damage.</AbstractText>\n            </Abstract>\n            <Affiliation>Department
-        of Pediatrics, Westmead Hospital, NSW, Australia.</Affiliation>\n            <AuthorList
+        significantly greater damage.</AbstractText>\n            </Abstract>\n            <AuthorList
         CompleteYN=\"Y\">\n                <Author ValidYN=\"Y\">\n                    <LastName>Todd</LastName>\n
         \                   <ForeName>D A</ForeName>\n                    <Initials>DA</Initials>\n
-        \               </Author>\n                <Author ValidYN=\"Y\">\n                    <LastName>John</LastName>\n
-        \                   <ForeName>E</ForeName>\n                    <Initials>E</Initials>\n
-        \               </Author>\n                <Author ValidYN=\"Y\">\n                    <LastName>Osborn</LastName>\n
-        \                   <ForeName>R A</ForeName>\n                    <Initials>RA</Initials>\n
-        \               </Author>\n            </AuthorList>\n            <Language>eng</Language>\n
-        \           <PublicationTypeList>\n                <PublicationType>Comparative
-        Study</PublicationType>\n                <PublicationType>Journal Article</PublicationType>\n
-        \           </PublicationTypeList>\n        </Article>\n        <MedlineJournalInfo>\n
-        \           <Country>UNITED STATES</Country>\n            <MedlineTA>Crit
-        Care Med</MedlineTA>\n            <NlmUniqueID>0355501</NlmUniqueID>\n            <ISSNLinking>0090-3493</ISSNLinking>\n
-        \       </MedlineJournalInfo>\n        <CitationSubset>AIM</CitationSubset>\n
-        \       <CitationSubset>IM</CitationSubset>\n        <MeshHeadingList>\n            <MeshHeading>\n
-        \               <DescriptorName MajorTopicYN=\"N\">Animals</DescriptorName>\n
-        \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
-        MajorTopicYN=\"N\">Animals, Newborn</DescriptorName>\n            </MeshHeading>\n
-        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\">Female</DescriptorName>\n
+        \                   <Affiliation>Department of Pediatrics, Westmead Hospital,
+        NSW, Australia.</Affiliation>\n                </Author>\n                <Author
+        ValidYN=\"Y\">\n                    <LastName>John</LastName>\n                    <ForeName>E</ForeName>\n
+        \                   <Initials>E</Initials>\n                </Author>\n                <Author
+        ValidYN=\"Y\">\n                    <LastName>Osborn</LastName>\n                    <ForeName>R
+        A</ForeName>\n                    <Initials>RA</Initials>\n                </Author>\n
+        \           </AuthorList>\n            <Language>eng</Language>\n            <PublicationTypeList>\n
+        \               <PublicationType>Comparative Study</PublicationType>\n                <PublicationType>Journal
+        Article</PublicationType>\n            </PublicationTypeList>\n        </Article>\n
+        \       <MedlineJournalInfo>\n            <Country>UNITED STATES</Country>\n
+        \           <MedlineTA>Crit Care Med</MedlineTA>\n            <NlmUniqueID>0355501</NlmUniqueID>\n
+        \           <ISSNLinking>0090-3493</ISSNLinking>\n        </MedlineJournalInfo>\n
+        \       <CitationSubset>AIM</CitationSubset>\n        <CitationSubset>IM</CitationSubset>\n
+        \       <MeshHeadingList>\n            <MeshHeading>\n                <DescriptorName
+        MajorTopicYN=\"N\">Animals</DescriptorName>\n            </MeshHeading>\n
+        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\">Animals,
+        Newborn</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
+        \               <DescriptorName MajorTopicYN=\"N\">Female</DescriptorName>\n
         \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
         MajorTopicYN=\"N\">High-Frequency Ventilation</DescriptorName>\n                <QualifierName
         MajorTopicYN=\"Y\">adverse effects</QualifierName>\n            </MeshHeading>\n
@@ -334,5 +335,5 @@ http_interactions:
         \       <ArticleIdList>\n            <ArticleId IdType=\"pubmed\">1914489</ArticleId>\n
         \       </ArticleIdList>\n    </PubmedData>\n</PubmedArticle>\n\n</PubmedArticleSet>\n"
     http_version: 
-  recorded_at: Wed, 04 Dec 2013 00:37:24 GMT
+  recorded_at: Sat, 22 Mar 2014 00:50:26 GMT
 recorded_with: VCR 2.5.0
