--- a/fixtures/vcr_cassettes/sciencewire_harvester_wos_mix.yml
+++ b/fixtures/vcr_cassettes/sciencewire_harvester_wos_mix.yml
@@ -176,7 +176,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 04 Dec 2013 22:48:51 GMT
+      - Mon, 24 Mar 2014 18:12:41 GMT
       Content-Length:
       - '278'
     body:
@@ -185,7 +185,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>136741</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Wed, 04 Dec 2013 22:48:51 GMT
+  recorded_at: Mon, 24 Mar 2014 18:12:41 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/136741?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -223,7 +223,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 04 Dec 2013 22:48:51 GMT
+      - Mon, 24 Mar 2014 18:12:41 GMT
       Content-Length:
       - '3087'
     body:
@@ -266,7 +266,7 @@ http_interactions:
         \   <CopyrightStateProvince>NY</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Wed, 04 Dec 2013 22:48:51 GMT
+  recorded_at: Mon, 24 Mar 2014 18:12:41 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -284,7 +284,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Wed, 04 Dec 2013 22:48:52 GMT
+      - Mon, 24 Mar 2014 18:12:41 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -292,12 +292,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 73BE262E29FB1541_0116SID
+      - 9DFC28D133075991_0440SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=73BE262E29FB1541_0116SID; domain=.nih.gov; path=/; expires=Thu, 04
-        Dec 2014 22:48:52 GMT
+      - ncbi_sid=9DFC28D133075991_0440SID; domain=.nih.gov; path=/; expires=Tue, 24
+        Mar 2015 18:12:41 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -306,8 +306,9 @@ http_interactions:
       - chunked
     body:
       encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n\n<eFetchResult>\n\t<ERROR>WebEnv
+      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<!DOCTYPE eEfetchResult
+        PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Wed, 04 Dec 2013 22:48:52 GMT
+  recorded_at: Mon, 24 Mar 2014 18:12:42 GMT
 recorded_with: VCR 2.5.0
